--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <header class="header">
-   <ul>
+   <div class="logo"><img src="img/Vetka.png" width="120" height="90" alt="a lover of books"></div>
+    <nav class="main-menu"><ul>
       <li><a>Главная</a></li>
       <li><a href="evidence.html">Интересные факты</a></li>
     </ul>
