--- a/evidence.html
+++ b/evidence.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-   <div class="logo"><img src="img/logo.jpg" width="120" height="90" alt="a lover of books"></div>
+   <div class="logo"><img src="img/Vetka.png" width="120" height="90" alt="a lover of books"></div>
     <nav class="main-menu"><ul>
       <li><a href="index.html">Главная</a></li>
       <li><a>Интересные факты</a></li>
