--- a/evidence.html
+++ b/evidence.html
@@ -3,7 +3,7 @@
   <head>
     <title>Live smiling: Интересные факты</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/Css1.css">
   </head>
   <body>
     <header class="header">
